--- a/event/package.json
+++ b/event/package.json
@@ -30,7 +30,8 @@
     "class-validator": "^0.14.2",
     "mongoose": "^8.15.0",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
