--- a/event/.env.for.test
+++ b/event/.env.for.test
@@ -1,4 +1,4 @@
 PORT=3002
 MONGO_URI=mongodb://localhost:27017/nexon
-ATTENDANCE_ENDPOINT_URL=http://attendance-service:3001
+ATTENDANCE_ENDPOINT_URL=http://localhost:3001
 USER_ENDPOINT_URL=http://localhost:3000
