--- a/auth/.env.for.test
+++ b/auth/.env.for.test
@@ -6,3 +6,8 @@ ADMIN_SECRET_CODE=maple-admin
 AUDITOR_SECRET_CODE=maple-auditor
 OPERATOR_SECRET_CODE=maple-operator
 USER_SECRET_CORE=maple-user
+
+JWT_SECRET=21B9311B6E738BE62C39A4D3CD785
+JWT_EXPIRES_IN=7200s
+REFRESH_TOKEN_SECRET=2924D23916AB185E1D3645D5D2F98
+REFRESH_TOKEN_EXPIRES_IN=1d
