feat(gateway): 인증 인가 전력 설정을 추가합니다.

--- a/gateway/.env.for.test
+++ b/gateway/.env.for.test
@@ -1,8 +1,11 @@
 PORT=1206
 
 AUTH_SERVICE_ENDPOINT=http://localhost:3003
+EVENT_SERVICE_ENDPOINT=http://localhost:3002
+
 
 JWT_SECRET=21B9311B6E738BE62C39A4D3CD785
 JWT_EXPIRES_IN=7200s
 REFRESH_TOKEN_SECRET=2924D23916AB185E1D3645D5D2F98
 REFRESH_TOKEN_EXPIRES_IN=1d
+
