feat(gateway): 유저 정보 변경 엔드포인트를 추가합니다.

--- a/gateway/.env.for.test
+++ b/gateway/.env.for.test
@@ -2,7 +2,7 @@ PORT=1206
 
 AUTH_SERVICE_ENDPOINT=http://localhost:3003
 EVENT_SERVICE_ENDPOINT=http://localhost:3002
-
+USER_SERVICE_ENDPOINT=http://localhost:3000
 
 JWT_SECRET=21B9311B6E738BE62C39A4D3CD785
 JWT_EXPIRES_IN=7200s
